# model-service

./: LICENSE  README.md  dockerfile  model.dvc  pyproject.toml
.github/workflows/: docker-publish.yml  linting.yml
src/: app.py
tests/: test_model_development.py
tests/dummy_data/: sample_test.txt  sample_train.txt  sample_val.txt
