[tool.poetry]
name = "model-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.0.3"
gdown = "^5.1.0"
dvc = "^3.50.1"
dvc-gdrive = "^3.0.1"
lib-ml-group3 = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
